[package]
edition = "2021"
name = "music_playlist_downloader"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
clap = {version = "3.0.5", features = ["derive"]}
google-youtube3 = "2.0.0"
hyper = "^0.14"
hyper-rustls = "0.22.0"
serde = "1.0"
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
yup-oauth2 = "5.0"
